Add more Redux and React links

--- a/site/React/GettingStarted/index.html
+++ b/site/React/GettingStarted/index.html
@@ -116,6 +116,9 @@
 <h3 id="javascript-es6-cheatsheet-2-the-best-of-js-es6">Javascript ES6 Cheatsheet #2 - the best of JS ES6</h3>
 <p><iframe width="560" height="315" src="https://www.youtube.com/embed/LmL0Gh193M0?ecver=1" frameborder="0" allowfullscreen></iframe></p>
 <h2 id="react">React</h2>
+<p>Start here: .</p>
+<p><a href='https://github.com/petehunt/react-howto'>Your guide to the (sometimes overwhelming!) React ecosystem.</a>
+<br />
 <p>This Codecademy React Courses include exercises and explain the basics of React.
 They are probably the most important links in this page.</p>
 <p><a href='https://www.codecademy.com/learn/react-102'>React 101</a>
@@ -127,6 +130,17 @@ They are probably the most important links in this page.</p>
 It is important to follow the whole playlist, as it explains fundamental concepts of Redux
 <br />
 <a href='https://www.youtube.com/playlist?list=PLoYCgNOIyGADILc3iUJzygCqC8Tt3bRXt'>Redux Tutorials</a></p>
+
+<p>
+    <a href='https://egghead.io/instructors/dan-abramov'>Dan Abramov (creator of Redux and React Hot Loader) tutorials:</a> 
+    Redux core concepts, and advanced topics.
+</p>
+
+<br />
+<p><a href='https://github.com/enaqx/awesome-react'>A collection of awesome things regarding React ecosystem.</a></p>
+
+
+<br />
 <h2 id="immutable-js">Immutable JS</h2>
 <p>This is a tutorial of a great library for simplifying the logic inside reducers
 <br />
